k8s/overlays/k3s-prod/ingress/ingressroute-comms-api.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-api-comms-prefix
  namespace: nem-apps
spec:
  replacePathRegex:
    regex: ^/api/comms/(.*)
    replacement: /api/$1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-comms-config-contract
  namespace: nem-apps
spec:
  replacePathRegex:
    regex: ^/api/comms/config-contract$
    replacement: /config-contract
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-comms
  namespace: nem-apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nem.endorff.net`) && Path(`/api/comms/config-contract`)
      priority: 121
      middlewares:
        - name: rewrite-comms-config-contract
      services:
        - name: nem-comms
          port: 5280
    - kind: Rule
      match: Host(`nem.endorff.net`) && PathPrefix(`/api/comms`)
      priority: 120
      middlewares:
        - name: rewrite-api-comms-prefix
      services:
        - name: nem-comms
          port: 5280
  tls:
    secretName: nem-endorff-net-tls
