k8s/overlays/k3s-prod/ingress/ingressroute-mimir-hubs.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mimir-hubs
  namespace: nem-apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nem.endorff.net`) && PathPrefix(`/hubs/chat`)
      priority: 110
      services:
        - name: nem-mimir
          port: 5000
    - kind: Rule
      match: Host(`nem.endorff.net`) && PathPrefix(`/hubs/collaboration`)
      priority: 110
      services:
        - name: nem-mimir
          port: 5000
  tls:
    secretName: nem-endorff-net-tls
